Migration to new APIs, part I: remove dependency on sac.jar and stop supporting other parsers.